--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,5 @@ ConsoleApplication1/x64/Debug/ConsoleApplication1.pdb
 ConsoleApplication1/x64/Debug/ConsoleApplication1.vcxproj.FileListAbsolute.txt
 ConsoleApplication1/x64/Debug/vc143.idb
 ConsoleApplication1/x64/Debug/vc143.pdb
+ConsoleApplication1/.vs/ConsoleApplication1/v17/Browse.VC.db
+ConsoleApplication1/.vs/ConsoleApplication1/v17/.suo
