--- a/.gitignore
+++ b/.gitignore
@@ -415,4 +415,5 @@ ConsoleApplication1/x64/Debug/vc143.idb
 ConsoleApplication1/x64/Debug/vc143.pdb
 ConsoleApplication1/.vs/ConsoleApplication1/v17/Browse.VC.db
 ConsoleApplication1/.vs/ConsoleApplication1/v17/.suo
-.vs\
+ConsoleApplication1\.vs\
+ConsoleApplication1/.vs/
