--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,5 @@ ConsoleApplication1/.vs/ConsoleApplication1/v17/Browse.VC.db
 ConsoleApplication1/.vs/ConsoleApplication1/v17/.suo
 ConsoleApplication1\.vs\
 ConsoleApplication1/.vs/
+ConsoleApplication1/.vs/ConsoleApplication1/v17/Browse.VC.db
+ConsoleApplication1/.vs/ConsoleApplication1/v17/.suo
